crates/solidity/testing/snapshots/bindings_output/control/emit_event/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
   ╭─[input.sol:7:23]
   │
 7 │         emit TestEvent(x);
   │                       ─┬─  
   │                        ╰─── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── def: 1
 2 │     event TestEvent(int id);
   │           ────┬────  
   │               ╰────── def: 2
   │ 
 4 │     function test_emit() public {
   │              ────┬────  
   │                  ╰────── def: 3
 5 │         int x = 1;
   │             ┬  
   │             ╰── def: 4
   │ 
 7 │         emit TestEvent(x);
   │         ──┬─ ────┬────  
   │           ╰───────────── unresolved
   │                  │      
   │                  ╰────── def: 5
───╯
